# secure-annex-mcp

./: .gitignore  README.md  pyproject.toml
secure_annex_mcp/: __init__.py  __main__.py  server.py
