[project]
name = "secure-annex-mcp"
version = "0.1.0"
description = "SecureAnnex browser extension security analysis MCP"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.5",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2.7.2,<3.0.0",
    "mcp>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
secure-annex-mcp = "secure_annex_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["secure_annex_mcp"]
